manifests/whiteboarder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whiteboarder
  namespace: whiteboarder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whiteboarder.linus.solutions
      secretName: whiteboarder-linus-solutions-tls
  rules:
    - host: whiteboarder.linus.solutions
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whiteboarder
                port:
                  number: 80
